update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ Saved
 .vscode
 .vs
 .Content/StarterContent
+.Content/InfinityBladeAdversaries
+.Content/InfinityBladeEffects
 *.VC.db
 *.opensdf
 *.opendb
